--- a/simetra_app/static/simetra_app/data_base_page/styles/style.css
+++ b/simetra_app/static/simetra_app/data_base_page/styles/style.css
@@ -443,6 +443,11 @@ body {
 /*-------------------------------------------------------------*/
 /*-----Technical classes---------------------------------------*/
 /*-------------------------------------------------------------*/
+hr {
+  height: 1px;
+  background-color: #C8C9CA;
+}
+
 ._container {
   max-width: 1200px;
   margin: 0px auto;
